todo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-service-deployment
  labels:
    app: todo-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-service
  template:
    metadata:
      labels:
        app: todo-service
    spec:
      containers:
        - name: todo-service
          image: davidseyboldblog/todo-service:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 12001
