user-deployment.yaml
# Kubernetes version
apiVersion: apps/v1
# Type of controller
kind: Deployment
metadata:
  name: user-deployment
  labels:
    app: user

spec:
  # Number of instances of this application that should exist at a time
  replicas: 1
  # Defines a selector used to count the number of instances
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user-service
          image: davidseyboldblog/user-service:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 12000
