todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  selector:
    app: todo-service
  ports:
  - protocol: TCP
    port: 12001
    targetPort: 12001
